# trading-system-connectivity

./: AGENTS.md  Cargo.toml  README.md  SPEC.md  readme
.github/workflows/: ci.yml  deploy.yml
config/: default.toml
crates/aeron-publisher/: Cargo.toml
crates/aeron-publisher/src/: backpressure.rs  error.rs  heartbeat.rs  lib.rs  publication.rs  publisher.rs
crates/binance-futures-adapter/: Cargo.toml
crates/binance-futures-adapter/src/: circuit_breaker.rs  connection_manager.rs  error.rs  lib.rs  normalizer.rs  recovery.rs  recovery_buffer.rs  sequence.rs  shard_engine.rs  stream.rs  symbol_state.rs
crates/binance-spot-adapter/: Cargo.toml
crates/binance-spot-adapter/src/: bbo_validator.rs  circuit_breaker.rs  connection_manager.rs  error.rs  feed.rs  instrument.rs  lib.rs  normalizer.rs  recovery.rs  recovery_buffer.rs  sbe_normalizer.rs  sequence.rs  shard_engine.rs  snapshot_validator.rs  stream.rs  symbol_state.rs
crates/connector-config/: Cargo.toml
crates/connector-config/src/: lib.rs  sharding.rs
crates/connector-core/: Cargo.toml
crates/connector-core/src/: codec.rs  error.rs  header.rs  lib.rs  message.rs  types.rs
crates/connector-core/tests/: golden.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: counter.rs  histogram.rs  lib.rs  registry.rs  render.rs
crates/order-book/: Cargo.toml
crates/order-book/src/: harness.rs  lib.rs
crates/order-book/tests/: chaos_tests.rs  property_tests.rs
crates/order-gateway/: Cargo.toml
crates/order-gateway/src/: cloid.rs  error.rs  gateway.rs  journal.rs  lib.rs  machine.rs  normalizer.rs  reconciler.rs  types.rs  user_stream.rs
crates/protocol-json/: Cargo.toml
crates/protocol-json/src/: error.rs  futures.rs  lib.rs  spot.rs
crates/protocol-sbe/: Cargo.toml
crates/protocol-sbe/schemas/: spot_prod.xml
crates/protocol-sbe/src/: aggressorside.rs  decimal.rs  decoders.rs  error.rs  header.rs  lib.rs  template.rs
crates/redundancy/: Cargo.toml
crates/redundancy/src/: arbiter.rs  lib.rs  publisher.rs
crates/refdata/: Cargo.toml
crates/refdata/src/: client.rs  error.rs  event.rs  lib.rs  normalizer.rs  open_interest.rs  publisher.rs  registry.rs
crates/replay/: Cargo.toml
crates/replay/src/: frame.rs  lib.rs  mode.rs  replayer.rs
deploy/: Dockerfile  Dockerfile.aeron-driver  Dockerfile.clickhouse-bridge  Dockerfile.runtime-aeron-driver  Dockerfile.runtime-bridge  Dockerfile.runtime-connector  aws-tuning.sh  connector@.service  env  notes.md  runbook.md
deploy/k8s/: clickhouse.yaml  connector-configmap.yaml  credentials-secret.yaml  deployment.yaml  kustomization.yaml  schema-job.yaml  service.yaml
deploy/scripts/: aws-setup.sh  node-setup.sh
